[package]
name = "srml-slashing"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
sr-primitives = { path = "../../core/sr-primitives", default-features = true }
parity-codec = { version = "3.5.1", default-features = false, features = ["derive"] }
